# sssiyan_trainer

./: .gitignore  CMakeLists.txt  Config.hpp.in  README.md  build.bat  build_vs2022.bat  build_vs2022_debug.bat  build_vs2022_devmode.bat  build_vs2022_rdb.bat  q
.github/workflows/: build.yml  dev-release.yml
dependencies/: CMakeLists.txt
dependencies/EasyWindow/: EasyWindowWin32.cpp
dependencies/ImWindow/: ImwContainer.cpp
dependencies/imgui/: imgui.cpp  imgui_internal.h  imgui_widgets.cpp
dependencies/minhook/include/: MinHook.h
dependencies/minhook/src/: hook.c  trampoline.c
dependencies/reframework/: CMakeLists.txt  cmake.toml
dependencies/reframework/shared/sdk/: RETypeDB.hpp
fluffymod/: Readme.md  modinfo.ini
fluffymod/Collab Trainer/Configs/: AOBList.ini
fluffymod/Collab Trainer/EmListEditor/BpDefault/: BP.json
fluffymod/Collab Trainer/Scripts/: BalrogScript.lua  BreakerSwitcher.lua  HoldToMash.lua  PlayerManipulator.lua  doppelweaponswitcher.lua  enumerator.lua  nerotestprefaboverride.lua  vergilloadweaponoverride.lua
fluffymod/configs/: runtime.args
fluffymod/natives/x64/Mods/BPExtra/: modinfo.ini
fluffymod/natives/x64/Mods/LDK TitleScreen/: modinfo.ini
fluffymod/natives/x64/Mods/Spite Edition Title Screen/: modinfo.ini
fluffymod/natives/x64/System/LDK/: modinfo.ini
fluffymod/natives/x64/System/SW_BP/: modinfo.ini
fluffymod/natives/x64/System/SW_VOID/: modinfo.ini
fluffymod/natives/x64/bfx/mesh/mesh_character/: mesh_03_em5500_000_01.mdf2.10
fluffymod/natives/x64/bfx/mesh/mesh_weapon/: efd_wp_011_001_00.efx.1769672  epv_shl5900_600.pfb.16
fluffymod/natives/x64/menu/gameover/: gameover.tml.27
fluffymod/natives/x64/message/: gameover.msg.14  mainmenu.msg.14  missionselect.msg.14  popup.msg.14  thevoid.msg.14  void_pausemenu.msg.14
fluffymod/natives/x64/props/besh/sb0914_needlewave_01/: sm0914_needlewave_01.mesh.1808282334  sm0914_needlewave_01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0044_bench01/: sm0044_bench01.mesh.1808282334  sm0044_bench01_e.mcol.3017  sm0044_bench01_mat.mdf2.10  sm0044_bench01_t.mcol.3017
fluffymod/natives/x64/props/besh/sm0044_bench01_01/: sm0044_bench01_01.mesh.1808282334  sm0044_bench01_01_mat.mdf2.10  sm0044_bench01_01_rb.rbs.27
fluffymod/natives/x64/props/besh/sm0051_trash01/: sm0051_trash01.mesh.1808282334
fluffymod/natives/x64/props/besh/sm0051_trash01_01/: sm0051_trash01_01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0053_fence01/: sm0053_fence01_e.mcol.3017  sm0053_fence01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0053_fence01_01/: sm0053_fence01_01.mesh.1808282334  sm0053_fence01_01_e.mcol.3017  sm0053_fence01_01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0053_fence01_02/: sm0053_fence01_02.mesh.1808282334  sm0053_fence01_02_e.mcol.3017  sm0053_fence01_02_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0135_treea/: sm0135_treea_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0135_treea_01/: sm0135_treea_01.mesh.1808282334  sm0135_treea_01_e.mcol.3017  sm0135_treea_01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0138_statuea/: sm0138_statuea_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0138_statuea_02/: sm0138_statuea_02.mesh.1808282334
fluffymod/natives/x64/props/besh/sm0138_statuea_04/: sm0138_statuea_04_e.mcol.3017
fluffymod/natives/x64/props/besh/sm0316_drumcan_01/: sm0316_drumcan_01.mesh.1808282334  sm0316_drumcan_01_e.mcol.3017  sm0316_drumcan_01_mat.mdf2.10
fluffymod/natives/x64/props/besh/sm0500_pipebreak_02/: sm0500_pipebreak_02.mesh.1808282334
fluffymod/natives/x64/scene/replay/: m15_presetreplay01.scn.19
fluffymod/natives/x64/sound/: wwiseMemorySettings.wms.5
fluffymod/natives/x64/sound/wwise/: sm0541_minelaunchera.bnk.2.x64
src/: CMakeLists.txt  Config.hpp  ControllerHook.cpp  ControllerHook.hpp  D3D11Hook.cpp  D3D11Hook.hpp  D3D12Hook.cpp  D3D12Hook.hpp  DInputHook.cpp  DInputHook.hpp  EnemyData.cpp  EnemyData.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  InitPatternsManager.hpp  KeyBinder.cpp  KeyBinder.hpp  Layout_wind.hpp  LicenseStrings.hpp  LuaMod.hpp  Main.cpp  Mod.hpp  ModFramework.cpp  ModFramework.hpp  Mods.cpp  Mods.hpp  PositionHooks.cpp  WindowsMessageHook.hpp  XInputHook.cpp  XInputHook.hpp  dmc5font.hpp  icons.hpp
src/ImGuiExtensions/: ImGuiExtensions.cpp  ImGuiExtensions.h
src/ListEditor/: AllocatedData.hpp  ListManager.hpp  MimicList.hpp  MimicMngObj.hpp
src/WindowLayout/: sample.h
src/events/: EventArgs.hpp  EventHandler.hpp  Events.hpp
src/fw-imgui/: ImGuiLua.cpp  ImGuiLua.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_notify.h  ui.cpp  ui.hpp
src/mods/: AerialPushback.cpp  AerialPushback.hpp  AerialPushbackVertical.cpp  AerialPushbackVertical.hpp  AirMoves.cpp  AirMoves.hpp  AirTrickDodge.cpp  AirTrickDodge.hpp  AllOrNothing.cpp  AllOrNothing.hpp  AllStart.cpp  AllStart.hpp  AllStartManual.cpp  AllStartManual.hpp  AlwaysSTaunts.cpp  AlwaysSTaunts.hpp  AprilFools.cpp  AprilFools.hpp  BossDanteSetup.cpp  BossDanteSetup.hpp  BossTrickUp.hpp  BossVergilMoves.hpp  BossVergilSettings.hpp  BpStageJump.cpp  BpStageJump.hpp  BreakerSwitcher.cpp  BreakerSwitcher.hpp  BufferedReversals.cpp  BufferedReversals.hpp  BufferedReversalsOriginal.cpp  BufferedReversalsOriginal.hpp  BypassBPCav.cpp  BypassBPCav.hpp  CaliburExceed.cpp  CaliburExceed.hpp  CameraSettings.cpp  CameraSettings.hpp  ChargeChecker.cpp  ChargeChecker.hpp  CheckpointPos.cpp  (+295 more)
src/mods/Coroutine/: Coroutines.hpp
src/mods/GameFunctions/: CreateShell.hpp  GameFunc.hpp  GameModelRequestSetEffect.hpp  GameModelSetAction.hpp  PlVergilDoppel.hpp  PlayerCheckNormalJump.hpp  PlayerSetDT.hpp  PositionController.hpp  PrefabInstantiate.hpp  RequestPlCameraShake.hpp
src/mods/PrefabFactory/: PrefabFactory.hpp
src/sdk/: DMC5.hpp  Offsets.hpp  REContext.cpp  REContext.hpp  ReClass.hpp  ReClass_Internal.hpp  SDKHelpers.cpp  SDKHelpers.hpp
src/utility/: Config.cpp  Config.hpp  Detour.cpp  Detour.hpp  FunctionHook.cpp  FunctionHook.hpp  Memory.cpp  Memory.hpp  Module.cpp  Module.hpp  Scan.cpp  Scan.hpp
(+161 files in other folders)
